--- a/module2/styles.css
+++ b/module2/styles.css
@@ -5,58 +5,33 @@ body
   box-sizing: border-box;
 }
 
+h1 {text-align: center;
+  }
 
-p {
+#content {
+  background-color: #3498eb;
+  color: white;
+ border: solid black 1px;
+}
+
+#title {
+  text-align: center;
+  width: 80px;
+  color: white;
+  background-color: #2b567a;
   border: 1px solid black;
-  background-color: #8994b0;
-}
-
-
-div {
-  position: relative;
+  padding: 5px;
 
 }
-.p-text {
-padding-top: 50px;
-  margin-right: 30px;
-  margin-left: 30px;
-
+.p-text{
+  padding-left: 30px; 
+  padding-right: 30px; 
+  padding-bottom: 10px;
+  padding-top: 5px;
 }
 
-#title1 {
-  background: red;
-  float: right;
-  width: 70px;
-  height: 30px:;
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 0;
-margin-right: 30px
+[class^="col"] {padding: 0.5em }
 
-}
-#title2 {
-  background: green;
-  float: right;
-  width: 70px;
-  height: 30px:;
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 0;
-margin-right: 30px
-}
-#title3 {
-  background: yellow;
-  float: right;
-  width: 70px;
-  height: 30px:;
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 0;
-margin-right: 30px
-}
 
 /* Simple Responsive Framework. */
 .row {
@@ -104,6 +79,9 @@ margin-right: 30px
   .col-lg-12 {
     width: 100%;
   }
+
+[class^="col"]:last-child { padding-right: 0.5rem }
+[class^="col"]:first-child { padding-left: .5rem }
 }
 
 /********** Medium devices only **********/
